2013-04-24  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Strip trailig zeroes from memory voltage values
	  (DMI type 17).

2013-04-17  Anton Arapov  <anton@redhat.com>

	Update to support SMBIOS specification version 2.8.0.

	* dmidecode.c: Correct processor family name (DMI type 4).
	* dmidecode.c: Correct typo in processor upgrade type (DMI type 4).
	* dmidecode.c: Add 9 new processor families (DMI type 4).
	* dmidecode.c: Add 2 new Intel socket types (DMI type 4).
	* dmidecode.c: Add Min/Max/Configured memory voltages (DMI type 17).
	* dmidecode.c: Add LRDIMM to memory device list (DMI type 17).

2012-03-26  Anton Arapov  <anton@redhat.com>

	* man/dmidecode.8: Add missing DMI type introduced with SMBIOS 2.7+, and
	  include the information about the extra output when dmidecode is run
	  on a hardware that has non-supported SMBIOS version.

2012-03-12  Anton Arapov  <anton@redhat.com>

	* dmioem.c: Add "PXE" to the HP OEM Type 209 output so it is similar to
	  the "iSCSI" description in HP OEM Type 221. Patch from Naga Chumbalkar.

2011-11-18  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Properly print the hexadecimal value of invalid
	  string characters.

2011-11-14  Anton Arapov  <anton@redhat.com>

	* dmidecode.c: Make dmi_chassis_type aware of the lock bit.
	  Patch from Stefan Tauner.
	* config.h: Haiku dropped the _BEOS_ definition in favor of its own
	  platform identification _HAIKU_. Patch from Francois Revol.

2011-04-20  Jean Delvare  <khali@linux-fr.org>

	Update to support SMBIOS specification version 2.7.1.

	* dmidecode.c: Add 6 AMD processor families (DMI type 4).
	* dmidecode.c: Add cache associativity value
	  "20-way Set-associative" (DMI type 7).
	* dmidecode.c: Add PCI Express 3 slot types (DMI type 9).

2011-01-25  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Fix boundary checks of memory array location codes
	  (DMI type 16). Reported by Andrey Matveyev.

2010-11-24  Jean Delvare  <khali@linux-fr.org>
